# pkmdex

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_ANALYSIS.md  DESIGN.md  Dockerfile  MIGRATION.md  QUICKSTART.md  README.md  SPECIFICATION.md  STATUS.md  WEB_README.md  docker-compose.yml  install.sh  pyproject.toml  start_web.sh  uninstall.sh
.beads/: issues.jsonl
.github/workflows/: docker-build.yml
docs/: DEPLOYMENT.md  PTCG-SET-CODES.md  QUICKSTART.md  schema_v2.md
src/: __init__.py  analyzer.py  api.py  cli.py  config.py  db.py  migrate_db.py  migrate_v2.py  models.py  session.py  set_code_mapping.py  web.py
src/templates/: index.html
tests/: __init__.py  test_analyzer.py  test_config.py  test_db.py
