[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pkmdex"
version = "0.2.0"
description = "CLI tool for managing Pokemon TCG card collections (multi-language support)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tcgdex-sdk>=1.0.0",  # Core dependency for TCGdex API access
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
]
web = [
    "fastapi>=0.104.0",    # Web interface framework
    "uvicorn>=0.24.0",     # ASGI server for FastAPI
]

[project.scripts]
pkm = "src.cli:main"
pkm-web = "src.web:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
